fixed duck game alignment, basic layout completed

--- a/projects/BikerGame/css/biker.css
+++ b/projects/BikerGame/css/biker.css
@@ -1,3 +1,6 @@
+body {
+	margin: 0;
+}
 
 circle.wheel {
 	fill: white;
